Ended the justification of the French Headers.lib documentation

--- a/docs/fr/modules/main/functions/Headers.tex
+++ b/docs/fr/modules/main/functions/Headers.tex
@@ -42,87 +42,119 @@
 
 \color{green}
 \subsection{Présentation}\color{white}
-Ce fichier source inclut des fonctions servant à la création de headers, séparant ce qu'un développeur de scripts Bash peut imaginer comme étant deux grandes étapes différentes d'un script.\\[1\baselineskip]
+
+\begin{justify}
+    Ce fichier source inclut des fonctions servant à la création de headers, séparant ce qu'un développeur de scripts Bash peut imaginer comme étant deux grandes étapes différentes d'un script.
+\end{justify}
+
+
+% -----------------------
+
+% -----------------------------------------------
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
 \subsection{Définitions des éléments mentionnés}\color{white}
 
 \color{blue}
 \subsubsection{Chemins de fichiers}\color{white}
+
 \textbf{Nom du fichier :} \textbf{\color{lime}Checkings.lib\color{white}}\\[1\baselineskip]
+
 \textbf{Dossier parent :} \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main\color{white}}\\[1\baselineskip]
 
 
+% -----------------------
 
 \color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
 \textbf{Nom du fichier :} \textbf{\color{lime}Colors.conf\color{white}}\\[1\baselineskip]
+
 \textbf{Dossier parent :} \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main\color{white}}\\[1\baselineskip]
 
 
+% -----------------------
 
 \color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
 \textbf{Nom du fichier :} \textbf{\color{lime}Status.conf\color{white}}\\[1\baselineskip]
+
 \textbf{Dossier parent :} \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main\color{white}}\\[1\baselineskip]
 
 
+% -----------------------
 
 \color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
 \textbf{Nom du fichier :} \textbf{\color{lime}Text.conf\color{white}}\\[1\baselineskip]
+
 \textbf{Dossier parent :} \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main\color{white}}\\[1\baselineskip]
 
 
-
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{Fonctions externes appelées}\color{white}
+
 \textbf{Fonction :} \textbf{\color{mauve}IsChar\color{white}}\\[1\baselineskip]
 
-\textbf{Description :} Cette fonction verifie que la valeur enregistrée dans une variable soit un simple caractère alphanumérique.\\[1\baselineskip]
+\begin{justify}
+    \textbf{Description :} Cette fonction verifie que la valeur enregistrée dans une variable soit un simple caractère alphanumérique.
+\end{justify}
 
 \textbf{Fichier de définition :} \textbf{\color{lime}Checkings.lib\color{white}}\\[1\baselineskip]
 
 
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{Variables globales externes et / ou variables d'environnement appelées}\color{white}
+
 \textbf{Variable :} \textbf{\color{orange}\$\_\_BU\_MAIN\_COLOR...\color{white}}\\[1\baselineskip]
 
-\textbf{Description :} Chacune des variables globales commençant par ce nom retourne un code couleu encodé lors de l'appel d'une de ces variables, grâce à l'appel simultané d'une fonction.\\[1\baselineskip]
+\begin{justify}
+    \textbf{Description :} Chacune des variables globales commençant par ce nom retourne un code couleu encodé lors de l'appel d'une de ces variables, grâce à l'appel simultané d'une fonction.
+\end{justify}
 
 \textbf{Fichier de définition :} \textbf{\color{lime}Colors.conf\color{white}}\\[1\baselineskip]
 
 
+% -----------------------
 
 \color{orange}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
+
 \textbf{Variable :} \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_ECHO\color{white}}\\[1\baselineskip]
 
-\textbf{Description :} Cette variable globale sert à mettre le script dans un état dit ``stable'', dans le cas où un rappel de la même fonction dans l'état précédent peut causer une boucle infinie.
-
-
-(( vérifiant si un texte peut être redirigé vers un fichier de logs sans provoquer de boucles infinies en\linebreak
-rappelant certaines fonctions ))
-\\[1\baselineskip]
+\begin{justify}
+    \textbf{Description :} Cette variable globale sert à mettre le script dans un état dit ``stable'', vérifiant si un texte peut être redirigé vers un fichier de logs sans provoquer de boucles infinies, dans le cas où un rappel de la même fonction dans l'état précédent peut causer ceci.
+\end{justify}
 
 \textbf{Fichier de définition :} \textbf{\color{lime}Status.conf\color{white}}\\[1\baselineskip]
 
 
+% -----------------------
 
 \color{orange}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
 \textbf{Variable :} \textbf{\color{orange}\$\_\_BU\_MAIN\_TXT\_CHAR\_HEADER\_LINE\color{white}}\\[1\baselineskip]
 
-\textbf{Description :} Cette variable globale enregistre le caractère par défaut à afficher sur chaque colonne d'une ligne d'un header.\\[1\baselineskip]
+\begin{justify}
+    \textbf{Description :} Cette variable globale enregistre le caractère par défaut à afficher sur chaque colonne d'une ligne d'un header.
+\end{justify}
 
 \textbf{Fichier de définition :} \textbf{\color{lime}Text.conf\color{white}}\\[1\baselineskip]
 
 
+% -----------------------
+
+% -----------------------------------------------
+
+% /////////////////////////////////////////////////////////////////////////////////////////////// %
 
 \color{red}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -132,41 +164,67 @@ rappelant certaines fonctions ))
 \color{green}
 \subsection{Création de base d'un header}\color{white}
 
+\color{blue}
+\subsubsection{DrawLine}\color{white}
+
 \textbf{Fonction : \color{mauve}DrawLine\color{white}}\\[1\baselineskip]
-\textbf{Description :}\linebreak
-Cette fonction dessine une ligne en remplissant chaque colonne du terminal avec un caractère choisi et passé en second argument.\linebreak
 
-% \textbf{Paramètres :}\\[1\baselineskip]
-% \begin{tabular}{|l|l|}
-% \hline & \\
-% \hline & \\
-% end{tabular}
+\begin{justify}
+    \textbf{Description :}\\
+    Cette fonction dessine une ligne en remplissant chaque colonne du terminal avec un caractère choisi et passé en second argument.
+\end{justify}
 
-\textbf{\color{orange}p\_lineColor\color{white}} --> Ce paramètre attend un code couleur *.\linebreak
-\textbf{\color{orange}p\_lineChar\color{white}} --> Ce paramètre attend un seul caractère, qui sera affiché sur chaque colonne.\linebreak
-
-* Chaque code couleur est défini dans le fichier \textbf{\color{lime}Colors.conf\color{white}}.\\[1\baselineskip]
-
-\textbf{Fonctionnement :}\linebreak
-La fonction \textbf{\color{mauve}DrawLine\color{white}} vérifie d'abord que la valeur du second paramètre \textbf{\color{orange}\$p\_lineChar\color{white}} soit bien un simple caractère (alphabétique ou numérique) via la fonction \textbf{\color{mauve}IsChar\color{white}}, définie dans le fichier \textbf{\color{lime}Checkings.lib\color{white}}. Si ce n'est pas le cas, ce paramètre est redéfini, et seul le premier caractère de la chaîne est récupéré pour l'affichage de la ligne.\\[1\baselineskip]
-
-Cette fonction vérifie ensuite qu'une valeur soit passée en premier argument (paramètre \textbf{\color{orange}p\_lineColor\color{white}}). Si c'est le cas, la commande \textbf{\color{gray}echo\color{white}} est appelée avec ses options \textbf{\color{gray}-ne\color{white}} pour encoder la couleur de la ligne de caractère à dessiner.\\[1\baselineskip]
-
-Une fois ceci fait, une boucle \textbf{for} est exécutée. Pour un nombre \textbf{i} allant de 1 au nombre de colonnes présentes dans la fenêtre du terminal obtenu grâce à la commande \textbf{\color{gray}eval echo\color{white}}, on affiche \textbf{i} fois, sans retour à la ligne, le caractère passé en deuxième argument (\textbf{\color{orange}\$p\_lineChar\color{white}}) dans le fichier de\linebreak
-configurations \textbf{\color{lime}Text.conf\color{white}}.\\[1\baselineskip]
-
-Enfin, une fois la boucle exécutée, la fonction ré-encode la couleur d'affichage selon la couleur par\linebreak
-défaut du terminal, si le paramètre \textbf{\color{orange}\$p\_lineColor\color{white}} contient une valeur.\\[1\baselineskip]
-
-\textbf{Utilisation :}\linebreak
-Appelez cette fonction pour dessiner une ligne devant remplir la totalité des colonnes d'une ligne du terminal.\\[2\baselineskip]
+\textbf{Paramètres :}\\[1\baselineskip]
+\begin{tabular}{|l|l|}
+\hline
+\textbf{\color{orange}p\_lineColor\color{white}} & Ce paramètre attend un code couleur * \\
+\hline
+\textbf{\color{orange}p\_lineChar\color{white}} & Ce paramètre attend un seul caractère, qui sera affiché sur chaque colonne \\
+\hline
+\end{tabular}
 
 
-\color{mauve}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
+\begin{justify}
+    * Chaque code couleur est défini dans le fichier \textbf{\color{lime}Colors.conf\color{white}}.
+\end{justify}
+
+\begin{justify}
+    \textbf{Fonctionnement :}\\
+    La fonction \textbf{\color{mauve}DrawLine\color{white}} vérifie d'abord que la valeur du second paramètre \textbf{\color{orange}\$p\_lineChar\color{white}} soit bien un simple caractère (alphabétique ou numérique) via la fonction \textbf{\color{mauve}IsChar\color{white}}, définie dans le fichier \textbf{\color{lime}Checkings.lib\color{white}}. Si ce n'est pas le cas, ce paramètre est redéfini, et seul le premier caractère de la chaîne est récupéré pour l'affichage de la ligne.
+\end{justify}
+
+\begin{justify}
+    Cette fonction vérifie ensuite qu'une valeur soit passée en premier argument (paramètre \textbf{\color{orange}p\_lineColor\color{white}}). Si c'est le cas, la commande \textbf{\color{gray}echo\color{white}} est appelée avec ses options \textbf{\color{gray}-ne\color{white}} pour encoder la couleur de la ligne de caractère à dessiner.
+\end{justify}
+
+\begin{justify}
+    Une fois ceci fait, une boucle \textbf{for} est exécutée. Pour un nombre \textbf{i} allant de 1 au nombre de colonnes présentes dans la fenêtre du terminal obtenu grâce à la commande \textbf{\color{gray}eval echo\color{white}}, on affiche \textbf{i} fois, sans retour à la ligne, le caractère passé en deuxième argument (\textbf{\color{orange}\$p\_lineChar\color{white}}) dans le fichier de
+configurations \textbf{\color{lime}Text.conf\color{white}}.
+\end{justify}
+
+\begin{justify}
+    Enfin, une fois la boucle exécutée, la fonction ré-encode la couleur d'affichage selon la couleur par défaut du terminal, si le paramètre \textbf{\color{orange}\$p\_lineColor\color{white}} contient une valeur.
+\end{justify}
+
+\begin{justify}
+    \textbf{Utilisation :}\linebreak
+    Appelez cette fonction pour dessiner une ligne devant remplir la totalité des colonnes d'une ligne du terminal.\\
+\end{justify}
+
+
+% -----------------------
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
+
+\color{blue}
+\subsubsection{HeaderBase}\color{white}
 
 \textbf{Fonction : \color{mauve}HeaderBase\color{white}}\\[1\baselineskip]
-\textbf{Description :}\linebreak
-Cette fonction affiche un header complet.\\[1\baselineskip]
+
+\begin{justify}
+    \textbf{Description :}\\
+    Cette fonction affiche un header complet, avec ses deux lignes entourant une chaîne de caractères.
+\end{justify}
 
 \textbf{Paramètres :}\\[1\baselineskip]
 \begin{tabular}{|l|l|}
@@ -181,68 +239,113 @@ Cette fonction affiche un header complet.\\[1\baselineskip]
 \hline 
 \end{tabular}\\[1\baselineskip]
 
-\textbf{Fonctionnement :}\linebreak
-Tout d'abord, la fonction \textbf{\color{mauve}HeaderBase\color{white}} vérifie l'état de la variable de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_ECHO\color{white}}, puis en adaptant la commande d'affichage de texte à appeler, cette fonction appelle la fonction\linebreak \textbf{\color{mauve}DrawLine\color{white}} en y passant en arguments ses deux premiers paramètres.\\[1\baselineskip]
+\begin{justify}
+    \textbf{Fonctionnement :}\\
+    Tout d'abord, la fonction \textbf{\color{mauve}HeaderBase\color{white}} vérifie l'état de la variable de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_ECHO\color{white}}, puis en adaptant la commande d'affichage de texte à appeler, cette fonction appelle la fonction \textbf{\color{mauve}DrawLine\color{white}} en y passant en arguments ses deux premiers paramètres.
+\end{justify}
 
-Une fois ceci fait, un saut de ligne est effectué, et un message est affiché, avec la couleur choisie\linebreak
-encodée en premier (troisième paramètre) et le texte passé en quatrième argument.\\[1\baselineskip]
+\begin{justify}
+    Une fois ceci fait, un saut de ligne est effectué, et un message est affiché, avec la couleur choisie encodée en premier (troisième paramètre) et le texte passé en quatrième argument.
+\end{justify}
 
-La commande de ré-initialisation de décoration du terminal (définie dans les fichiers \textbf{\color{lime}Colors.conf\color{white}} et \textbf{\color{lime}Text.conf\color{white}}) est ensuite appelée pour réinitialiser la couleur d'affichage de texte selon la configuration du terminal.\\[1\baselineskip]
+\begin{justify}
+    La commande de ré-initialisation de décoration du terminal (définie dans les fichiers \textbf{\color{lime}Colors.conf\color{white}} et \textbf{\color{lime}Text.conf\color{white}}) est ensuite appelée pour réinitialiser la couleur d'affichage de texte selon la configuration du terminal.
+\end{justify}
+
+\begin{justify}
+    Appelez cette fonction pour afficher un texte entre deux lignes, et pour davantage personnaliser cet affichage si vous ne trouvez pas votre compte parmi les fonctions proposées dans les sections suivantes : \textbf{\color{green}Headers unicolores\color{white}} et \textbf{\color{green}Headers multicolores\color{white}}.
+\end{justify}
 
 \textbf{Utilisation :}\linebreak
-Appelez cette fonction pour afficher un texte entre deux lignes, et pour davantage personnaliser cet\linebreak affichage si vous ne trouvez pas votre compte parmi les fonctions proposées dans les sections\linebreak suivantes :
-\textbf{\color{green}Headers unicolores\color{white}} et \textbf{\color{green}Headers multicolores\color{white}}.\\[1\baselineskip]
 
+
+% -----------------------
+
+% -----------------------------------------------
 
 \color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
 \subsection{Headers unicolores}\color{white}
-\textbf{Description :}\linebreak
-Chacune de ces fonctions appelle la fonction \textbf{\color{mauve}HeaderBase\color{white}}, en lui passant ses trois premiers\linebreak     
-arguments prédéfinis.\\[1\baselineskip]
 
-\textbf{Paramètre :}\linebreak
-\textbf{\color{orange}\$1\color{white}} --> Ce paramètre attend la chaîne de caractère à afficher.\\[1\baselineskip]
+\begin{justify}
+    \textbf{Description :}
+    Chacune de ces fonctions appelle la fonction \textbf{\color{mauve}HeaderBase\color{white}}, en lui passant ses trois premiers arguments prédéfinis.
+\end{justify}
+
+\begin{justify}
+    \textbf{Paramètre :}\\
+    \textbf{\color{orange}\$1\color{white}} --> Ce paramètre attend la chaîne de caractère à afficher.
+\end{justify}
+
+\begin{justify}
+    \textbf{Fonctionnement :}\\
+    Chacune des fonctions de cette catégorie appelle la fonction \textbf{\color{mauve}HeaderBase\color{white}}, en lui passant en premier et troisième arguments un même code couleur \textbf{\color{orange}\$\_\_BU\_MAIN\_COLOR...\color{white}}, un caractère défini par la variable \textbf{\color{orange}\$\_\_BU\_MAIN\_TXT\_CHAR\_HEADER\_LINE\color{white}} en deuxième argument, puis la chaîne de caractères à afficher en quatrième argument (seul paramètre que prennent ces fonctions).
+\end{justify}
+
+\begin{justify}
+    \textbf{Utilisation :}
+    Appelez une de ces fonctions pour afficher un header unicolore sans avoir à passer ses trois premiers arguments.
+\end{justify}
 
 
-\textbf{Fonctionnement :}\linebreak
-Chacune des fonctions de cette catégorie appelle la fonction \textbf{\color{mauve}HeaderBase\color{white}}, en lui passant en premier\linebreak et troisième arguments un même code couleur \textbf{\color{orange}\$\_\_BU\_MAIN\_COLOR...\color{white}}, un caractère défini par la\linebreak variable \textbf{\color{orange}\$\_\_BU\_MAIN\_TXT\_CHAR\_HEADER\_LINE\color{white}} en deuxième argument, puis la chaîne de caractères à afficher en quatrième argument (seul paramètre que prennent ces fonctions).\\[1\baselineskip]
+% -----------------------
 
-\textbf{Utilisation :}\linebreak
-Appelez une de ces fonctions pour afficher un header unicolore sans avoir à passer ses trois premiers arguments.\\[1\baselineskip]
-
+% -----------------------------------------------
 
 \color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
 \subsection{Headers bicolores}\color{white}
-Pour davantage faciliter la tâche des développeurs, des fonctions de création de headers bicolores existent.\\[1\baselineskip]
 
-Elles fonctionnent chacune de la même manière que les fonctions de la catégorie précédente, à deux exceptions près :
-\begin{itemize}
- \item \textbf{le nom :} chaque fonction porte le nom de la couleur à afficher sur chaque ligne, puis le nom de la couleur à appliquer au texte.\\[1\baselineskip]
- \item \textbf{le nom (bis) :} Il n'y a pas de fonction portant deux fois le nom de la même couleur, car le rendu serait le même que celui des fonctions de la catégorie précédente.\\[1\baselineskip]
-\end{itemize}
+\begin{justify}
+    Pour davantage faciliter la tâche des développeurs, des fonctions de création de headers bicolores existent.
+\end{justify}
+
+\begin{justify}
+    Elles fonctionnent chacune de la même manière que les fonctions de la catégorie précédente, à deux exceptions près :
+
+    \begin{itemize}
+        \item \textbf{le nom :} chaque fonction porte le nom de la couleur à afficher sur chaque ligne, puis le nom de la couleur à appliquer au texte.\\
+
+        \item \textbf{le nom (bis) :} Il n'y a pas de fonction portant deux fois le nom de la même couleur, car le rendu serait le même que celui des fonctions de la catégorie précédente.
+    \end{itemize}
+\end{justify}
 
 
+% -----------------------
+
+% -----------------------------------------------
 
 \color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
 \subsection{Headers tricolores}\color{white}
-Étant donné la charge de travail nécessaire pour créer ces headers, il serait beaucoup trop fastidieux de créer tous ces headers prédéfinis.\\[1\baselineskip]
 
-Pour vous donner une idée de la quantité de travail, prenez la formule mathématique suivante :
+\begin{justify}
+    Étant donné la charge de travail nécessaire pour créer ces headers, il serait beaucoup trop fastidieux de créer tous ces headers prédéfinis.
+\end{justify}
+
+\begin{justify}
+    Pour vous donner une idée de la quantité de travail, prenez la formule mathématique suivante :
+\end{justify}
 
 \[nbcol * (nbcol - 1) * nbcol\]
 
-Où nbcol = nombre de codes couleurs disponibles.\linebreak
+\begin{justify}
+    Où nbcol = nombre de codes couleurs disponibles.
+\end{justify}
 
-Au moment où j'ai écrit cette partie de la documentation (dimanche 29 août 2021), il existait 12 codes couleurs disponibles.\\[1\baselineskip]
+\begin{justify}
+    Au moment où j'ai écrit cette partie de la documentation (dimanche 29 août 2021), il existait 12 codes couleurs disponibles.
+\end{justify}
 
-En effectuant le calcul précédent, nous obtenons donc \textbf{12 * 11 * 12 = 1 584 combinaisons possibles}, sans parler de l'ajout d'éventuels nouveaux codes couleurs.\\[1\baselineskip]
+\begin{justify}
+    En effectuant le calcul précédent, nous obtenons donc \textbf{12 * 11 * 12 = 1 584 combinaisons possibles}, sans parler de l'ajout d'éventuels nouveaux codes couleurs.
+\end{justify}
 
-Il faudra donc se contenter d'appeler la fonction \textbf{\color{mauve}HeaderBase\color{white}}, suivie de ses 4 arguments, dont chaque\linebreak valeur sera différente des autres.
+\begin{justify}
+    Il faudra donc se contenter d'appeler la fonction \textbf{\color{mauve}HeaderBase\color{white}}, suivie de ses 4 arguments, dont chaque valeur sera différente des autres.
+\end{justify}
 
 \end{document}
